--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hangman Game | Difficulty Levels</title>
+    <title>Hangman Game JavaScript | CodingNepal</title>
     <link rel="stylesheet" href="style.css">
-    <script src="list.js"></script>
-    <script src="logic.js"></script>
+    <script src="list.js" defer></script>
+    <script src="logic.js" defer></script>
 </head>
 
 <body>
@@ -24,12 +24,15 @@
             <img src="#" draggable="false" alt="hangman-img">
             <h1>Hangman Game</h1>
         </div>
+        <div class="difficulty-select">
+            <label for="difficulty">Select Difficulty:</label>
+            <select id="difficulty">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="difficult">Difficult</option>
+            </select>
+        </div>
         <div class="game-box">
-            <div class="difficulty-select">
-                <button class="difficulty-btn" data-difficulty="easy">Easy</button>
-                <button class="difficulty-btn" data-difficulty="medium">Medium</button>
-                <button class="difficulty-btn" data-difficulty="hard">Hard</button>
-            </div>
             <ul class="word-display"></ul>
             <h4 class="hint-text">Hint: <b></b></h4>
             <h4 class="guesses-text">Incorrect guesses: <b></b></h4>
